--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "open": "^10.0.0",
     "ora": "^7.0.1"
   },
-  "type": "module",
+  "type": "commonjs",
   "engines": {
     "node": ">=16.0.0"
   }
