--- a/package.json
+++ b/package.json
@@ -46,12 +46,12 @@
   "dependencies": {
     "@nestbox-ai/admin": "^1.0.38",
     "axios": "^1.8.4",
-    "chalk": "^5.3.0",
+    "chalk": "^4.1.2",
     "cli-table3": "^0.6.5",
     "commander": "^11.1.0",
-    "inquirer": "^9.2.12",
-    "open": "^10.0.0",
-    "ora": "^7.0.1"
+    "inquirer": "^8.2.6",
+    "open": "^8.4.2",
+    "ora": "5.4.1"
   },
   "type": "commonjs",
   "engines": {
