--- a/package.json
+++ b/package.json
@@ -34,6 +34,9 @@
   },
   "homepage": "https://github.com/NestboxAI/nestbox-ai-cli-tools#readme",
   "devDependencies": {
+    "@types/adm-zip": "^0.5.7",
+    "@types/archiver": "^6.0.3",
+    "@types/form-data": "^2.5.2",
     "@types/inquirer": "^9.0.7",
     "@types/node": "^20.10.5",
     "eslint": "^8.56.0",
@@ -44,14 +47,20 @@
     "vitest": "^1.1.0"
   },
   "dependencies": {
-    "@nestbox-ai/admin": "^1.0.38",
+    "@nestbox-ai/admin": "1.0.39",
+    "adm-zip": "^0.5.16",
+    "archiver": "^7.0.1",
     "axios": "^1.8.4",
     "chalk": "^4.1.2",
     "cli-table3": "^0.6.5",
     "commander": "^11.1.0",
+    "find-up": "^7.0.0",
+    "form-data": "^4.0.2",
     "inquirer": "^8.2.6",
+    "jszip": "^3.10.1",
     "open": "^8.4.2",
-    "ora": "5.4.1"
+    "ora": "5.4.1",
+    "os": "^0.1.2"
   },
   "type": "commonjs",
   "engines": {
