--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
   },
   "dependencies": {
     "@nestbox-ai/admin": "1.0.42",
+    "@types/js-yaml": "^4.0.9",
     "adm-zip": "^0.5.16",
     "archiver": "^7.0.1",
     "axios": "^1.8.4",
@@ -57,6 +58,7 @@
     "find-up": "^7.0.0",
     "form-data": "^4.0.2",
     "inquirer": "^8.2.6",
+    "js-yaml": "^4.1.0",
     "jszip": "^3.10.1",
     "open": "^8.4.2",
     "ora": "5.4.1",
