--- a/.github/workflows/generate-client.yml
+++ b/.github/workflows/generate-client.yml
@@ -1,4 +1,4 @@
-name: Generate the Nextbo AI Cli Tools
+name: Test, Build and Publish Nestbox AI CLI Tools
 
 on:
   push:
@@ -9,7 +9,7 @@ permissions:
   contents: write
 
 jobs:
-  generate-client:
+  test-and-publish:
     runs-on: ubuntu-latest
 
     steps:
@@ -28,15 +28,25 @@ jobs:
           node-version: '20.x'
           registry-url: 'https://registry.npmjs.org'
 
+      - name: Install dependencies
+        run: npm install
+
+      - name: Run tests
+        run: |
+          echo "Running tests..."
+          npm run test -- --run
+          echo "All tests passed! ✅"
+
       - name: Update package version
         run: |
           new_version="1.0.${{ github.run_number }}"
           jq ".version = \"$new_version\"" package.json > temp.json && mv temp.json package.json
           echo "Updated version to $new_version"  
 
-      - name: Build and Publish Clients to npm
-        run: |
-          npm install && npm run build
-          npm publish --access public --registry=https://registry.npmjs.org
+      - name: Build project
+        run: npm run build
+
+      - name: Publish to npm
+        run: npm publish --access public --registry=https://registry.npmjs.org
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
