fix: issue @rollup/rollup-linux-x64-gnu

--- a/.github/workflows/generate-client.yml
+++ b/.github/workflows/generate-client.yml
@@ -21,6 +21,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '20'
+          cache: 'npm'
 
       - name: Setup Node.js for npm Publish
         uses: actions/setup-node@v4
@@ -29,12 +30,29 @@ jobs:
           registry-url: 'https://registry.npmjs.org'
 
       - name: Install dependencies
-        run: npm install
+        run: |
+          npm install --prefer-offline --no-audit
+          
+      - name: Install platform-specific dependencies
+        run: |
+          # Install Linux-specific Rollup binary for vitest
+          npm install @rollup/rollup-linux-x64-gnu --no-save || echo "Warning: Could not install platform-specific Rollup binary"
+        continue-on-error: true
+          
+      - name: Verify installation
+        run: |
+          npm list vitest --depth=0
+          node --version
+          npm --version
 
       - name: Run tests
         run: |
           echo "Running tests..."
-          npm run test -- --run
+          echo "Node.js version: $(node --version)"
+          echo "NPM version: $(npm --version)"
+          echo "Checking if vitest is available..."
+          npx vitest --version || echo "Vitest not found via npx"
+          npm run test:ci
           echo "All tests passed! ✅"
 
       - name: Update package version
