feat: implemented yaml support for agent creation

--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
   },
   "dependencies": {
     "@nestbox-ai/admin": "1.0.42",
+    "@nestbox-ai/instances": "^1.0.50",
     "@types/js-yaml": "^4.0.9",
     "adm-zip": "^0.5.16",
     "archiver": "^7.0.1",
