--- a/package.json
+++ b/package.json
@@ -48,9 +48,10 @@
     "vitest": "^1.1.0"
   },
   "dependencies": {
-    "@nestbox-ai/admin": "1.0.42",
+    "@nestbox-ai/admin": "1.0.50",
     "@types/js-yaml": "^4.0.9",
     "adm-zip": "^0.5.16",
+    "ajv": "^8.17.1",
     "archiver": "^7.0.1",
     "axios": "^1.8.4",
     "chalk": "^4.1.2",
