--- a/.github/workflows/generate-client.yml
+++ b/.github/workflows/generate-client.yml
@@ -6,6 +6,7 @@ on:
       - main
 
 permissions:
+  id-token: write
   contents: write
 
 jobs:
@@ -66,5 +67,3 @@ jobs:
 
       - name: Publish to npm
         run: npm publish --access public --registry=https://registry.npmjs.org
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
