--- a/.github/workflows/generate-client.yml
+++ b/.github/workflows/generate-client.yml
@@ -66,4 +66,4 @@ jobs:
         run: npm run build
 
       - name: Publish to npm
-        run: npm publish --access public --provenance --registry=https://registry.npmjs.org
+        run: npm publish --access public --provenance
