--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
   "files": [
     "dist",
     "README.md",
-    "GETTING_STARTED.md",
-    ".nestboxrc"
+    "GETTING_STARTED.md"
   ],
   "repository": {
     "type": "git",
