fix: update to @nestbox-ai/admin 1.0.67

--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "vitest": "^1.1.0"
   },
   "dependencies": {
-    "@nestbox-ai/admin": "1.0.50",
+    "@nestbox-ai/admin": "^1.0.67",
     "@types/js-yaml": "^4.0.9",
     "adm-zip": "^0.5.16",
     "ajv": "^8.17.1",
