feat: allow openai key for generating config files

--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "jszip": "^3.10.1",
     "node-plop": "^0.32.0",
     "open": "^8.4.2",
+    "openai": "^6.22.0",
     "ora": "5.4.1",
     "os": "^0.1.2",
     "plop": "^4.0.1"
